compiler/antlr/SimpleC/grammar/SimpleCParser.py
# Generated from SimpleC.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SimpleCParser ( Parser ):

    grammarFileName = "SimpleC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int'", "'float'", "'double'", "'long'", 
                     "'short'", "'char'", "'if'", "'else'", "'while'", "'for'", 
                     "'void'", "'break'", "'continue'", "'return'", "'extern'", 
                     "'('", "')'", "'['", "']'", "'{'", "'}'", "';'", "','", 
                     "':'", "'+'", "'-'", "'*'", "'/'", "'%'", "'>'", "'<'", 
                     "'='", "'=='", "'>='", "'<='", "'!='", "'&&'", "'||'" ]

    symbolicNames = [ "<INVALID>", "INT", "FLOAT", "DOUBLE", "LONG", "SHORT", 
                      "CHAR", "IF", "ELSE", "WHILE", "FOR", "VOID", "BREAK", 
                      "CONTINUE", "RETURN", "EXTERN", "LP", "RP", "LB", 
                      "RB", "LCB", "RCB", "SEMI", "COMMA", "COLON", "ADD", 
                      "SUB", "MUL", "DIV", "REMAINDER", "GREATER", "LESS", 
                      "ASSIGN", "EQ", "GREATEREQ", "LESSEQ", "NEQ", "AND", 
                      "OR", "IDENT", "CONST_INT", "CONST_FLOAT", "CONST_CHAR", 
                      "CONST_LONG", "BlockComment", "LineComment", "MACRO", 
                      "WS" ]

    RULE_prog = 0
    RULE_topElement = 1
    RULE_extern_var_declare = 2
    RULE_extern_var_define = 3
    RULE_var_declare = 4
    RULE_var_declare_statement = 5
    RULE_var_define = 6
    RULE_var_define_statement = 7
    RULE_arrayInitValueList = 8
    RULE_function_declare = 9
    RULE_function_define = 10
    RULE_retType = 11
    RULE_param_list = 12
    RULE_param = 13
    RULE_type = 14
    RULE_constant = 15
    RULE_statement = 16
    RULE_assignment_statement = 17
    RULE_assignment = 18
    RULE_if_statement = 19
    RULE_if_else_statement = 20
    RULE_while_statement = 21
    RULE_for_statement = 22
    RULE_forExpr = 23
    RULE_break_statement = 24
    RULE_continue_statement = 25
    RULE_function_statement = 26
    RULE_return_statement = 27
    RULE_statementBlock = 28
    RULE_function_call = 29
    RULE_expressionList = 30
    RULE_expression = 31

    ruleNames =  [ "prog", "topElement", "extern_var_declare", "extern_var_define", 
                   "var_declare", "var_declare_statement", "var_define", 
                   "var_define_statement", "arrayInitValueList", "function_declare", 
                   "function_define", "retType", "param_list", "param", 
                   "type", "constant", "statement", "assignment_statement", 
                   "assignment", "if_statement", "if_else_statement", "while_statement", 
                   "for_statement", "forExpr", "break_statement", "continue_statement", 
                   "function_statement", "return_statement", "statementBlock", 
                   "function_call", "expressionList", "expression" ]

    EOF = Token.EOF
    INT=1
    FLOAT=2
    DOUBLE=3
    LONG=4
    SHORT=5
    CHAR=6
    IF=7
    ELSE=8
    WHILE=9
    FOR=10
    VOID=11
    BREAK=12
    CONTINUE=13
    RETURN=14
    EXTERN=15
    LP=16
    RP=17
    LB=18
    RB=19
    LCB=20
    RCB=21
    SEMI=22
    COMMA=23
    COLON=24
    ADD=25
    SUB=26
    MUL=27
    DIV=28
    REMAINDER=29
    GREATER=30
    LESS=31
    ASSIGN=32
    EQ=33
    GREATEREQ=34
    LESSEQ=35
    NEQ=36
    AND=37
    OR=38
    IDENT=39
    CONST_INT=40
    CONST_FLOAT=41
    CONST_CHAR=42
    CONST_LONG=43
    BlockComment=44
    LineComment=45
    MACRO=46
    WS=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SimpleCParser.EOF, 0)

        def topElement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleCParser.TopElementContext)
            else:
                return self.getTypedRuleContext(SimpleCParser.TopElementContext,i)


        def getRuleIndex(self):
            return SimpleCParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = SimpleCParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 70368744212606) != 0):
                self.state = 64
                self.topElement()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 70
            self.match(SimpleCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MACRO(self):
            return self.getToken(SimpleCParser.MACRO, 0)

        def extern_var_declare(self):
            return self.getTypedRuleContext(SimpleCParser.Extern_var_declareContext,0)


        def extern_var_define(self):
            return self.getTypedRuleContext(SimpleCParser.Extern_var_defineContext,0)


        def var_declare_statement(self):
            return self.getTypedRuleContext(SimpleCParser.Var_declare_statementContext,0)


        def var_define_statement(self):
            return self.getTypedRuleContext(SimpleCParser.Var_define_statementContext,0)


        def function_declare(self):
            return self.getTypedRuleContext(SimpleCParser.Function_declareContext,0)


        def function_define(self):
            return self.getTypedRuleContext(SimpleCParser.Function_defineContext,0)


        def getRuleIndex(self):
            return SimpleCParser.RULE_topElement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTopElement" ):
                listener.enterTopElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTopElement" ):
                listener.exitTopElement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopElement" ):
                return visitor.visitTopElement(self)
            else:
                return visitor.visitChildren(self)




    def topElement(self):

        localctx = SimpleCParser.TopElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_topElement)
        try:
            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self.match(SimpleCParser.MACRO)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.extern_var_declare()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 74
                self.extern_var_define()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 75
                self.var_declare_statement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 76
                self.var_define_statement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 77
                self.function_declare()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 78
                self.function_define()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Extern_var_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EXTERN(self):
            return self.getToken(SimpleCParser.EXTERN, 0)

        def type_(self):
            return self.getTypedRuleContext(SimpleCParser.TypeContext,0)


        def IDENT(self):
            return self.getToken(SimpleCParser.IDENT, 0)

        def SEMI(self):
            return self.getToken(SimpleCParser.SEMI, 0)

        def getRuleIndex(self):
            return SimpleCParser.RULE_extern_var_declare

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExtern_var_declare" ):
                listener.enterExtern_var_declare(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExtern_var_declare" ):
                listener.exitExtern_var_declare(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExtern_var_declare" ):
                return visitor.visitExtern_var_declare(self)
            else:
                return visitor.visitChildren(self)




    def extern_var_declare(self):

        localctx = SimpleCParser.Extern_var_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_extern_var_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(SimpleCParser.EXTERN)
            self.state = 82
            self.type_()
            self.state = 83
            self.match(SimpleCParser.IDENT)
            self.state = 84
            self.match(SimpleCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Extern_var_defineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EXTERN(self):
            return self.getToken(SimpleCParser.EXTERN, 0)

        def type_(self):
            return self.getTypedRuleContext(SimpleCParser.TypeContext,0)


        def IDENT(self):
            return self.getToken(SimpleCParser.IDENT, 0)

        def ASSIGN(self):
            return self.getToken(SimpleCParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(SimpleCParser.ExpressionContext,0)


        def SEMI(self):
            return self.getToken(SimpleCParser.SEMI, 0)

        def getRuleIndex(self):
            return SimpleCParser.RULE_extern_var_define

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExtern_var_define" ):
                listener.enterExtern_var_define(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExtern_var_define" ):
                listener.exitExtern_var_define(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExtern_var_define" ):
                return visitor.visitExtern_var_define(self)
            else:
                return visitor.visitChildren(self)




    def extern_var_define(self):

        localctx = SimpleCParser.Extern_var_defineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_extern_var_define)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(SimpleCParser.EXTERN)
            self.state = 87
            self.type_()
            self.state = 88
            self.match(SimpleCParser.IDENT)
            self.state = 89
            self.match(SimpleCParser.ASSIGN)
            self.state = 90
            self.expression(0)
            self.state = 91
            self.match(SimpleCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(SimpleCParser.TypeContext,0)


        def IDENT(self):
            return self.getToken(SimpleCParser.IDENT, 0)

        def LB(self):
            return self.getToken(SimpleCParser.LB, 0)

        def CONST_INT(self):
            return self.getToken(SimpleCParser.CONST_INT, 0)

        def RB(self):
            return self.getToken(SimpleCParser.RB, 0)

        def getRuleIndex(self):
            return SimpleCParser.RULE_var_declare

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_declare" ):
                listener.enterVar_declare(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_declare" ):
                listener.exitVar_declare(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_declare" ):
                return visitor.visitVar_declare(self)
            else:
                return visitor.visitChildren(self)




    def var_declare(self):

        localctx = SimpleCParser.Var_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_declare)
        try:
            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self.type_()
                self.state = 94
                self.match(SimpleCParser.IDENT)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.type_()
                self.state = 97
                self.match(SimpleCParser.IDENT)
                self.state = 98
                self.match(SimpleCParser.LB)
                self.state = 99
                self.match(SimpleCParser.CONST_INT)
                self.state = 100
                self.match(SimpleCParser.RB)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declare_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declare(self):
            return self.getTypedRuleContext(SimpleCParser.Var_declareContext,0)


        def SEMI(self):
            return self.getToken(SimpleCParser.SEMI, 0)

        def getRuleIndex(self):
            return SimpleCParser.RULE_var_declare_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_declare_statement" ):
                listener.enterVar_declare_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_declare_statement" ):
                listener.exitVar_declare_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_declare_statement" ):
                return visitor.visitVar_declare_statement(self)
            else:
                return visitor.visitChildren(self)




    def var_declare_statement(self):

        localctx = SimpleCParser.Var_declare_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var_declare_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.var_declare()
            self.state = 105
            self.match(SimpleCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_defineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declare(self):
            return self.getTypedRuleContext(SimpleCParser.Var_declareContext,0)


        def ASSIGN(self):
            return self.getToken(SimpleCParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(SimpleCParser.ExpressionContext,0)


        def LCB(self):
            return self.getToken(SimpleCParser.LCB, 0)

        def RCB(self):
            return self.getToken(SimpleCParser.RCB, 0)

        def arrayInitValueList(self):
            return self.getTypedRuleContext(SimpleCParser.ArrayInitValueListContext,0)


        def getRuleIndex(self):
            return SimpleCParser.RULE_var_define

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_define" ):
                listener.enterVar_define(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_define" ):
                listener.exitVar_define(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_define" ):
                return visitor.visitVar_define(self)
            else:
                return visitor.visitChildren(self)




    def var_define(self):

        localctx = SimpleCParser.Var_defineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_var_define)
        self._la = 0 # Token type
        try:
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.var_declare()
                self.state = 108
                self.match(SimpleCParser.ASSIGN)
                self.state = 109
                self.expression(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.var_declare()
                self.state = 112
                self.match(SimpleCParser.ASSIGN)
                self.state = 113
                self.match(SimpleCParser.LCB)
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 16492741525504) != 0):
                    self.state = 114
                    self.arrayInitValueList()


                self.state = 117
                self.match(SimpleCParser.RCB)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_define_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_define(self):
            return self.getTypedRuleContext(SimpleCParser.Var_defineContext,0)


        def SEMI(self):
            return self.getToken(SimpleCParser.SEMI, 0)

        def getRuleIndex(self):
            return SimpleCParser.RULE_var_define_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_define_statement" ):
                listener.enterVar_define_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_define_statement" ):
                listener.exitVar_define_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_define_statement" ):
                return visitor.visitVar_define_statement(self)
            else:
                return visitor.visitChildren(self)




    def var_define_statement(self):

        localctx = SimpleCParser.Var_define_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_var_define_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.var_define()
            self.state = 122
            self.match(SimpleCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayInitValueListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constant(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleCParser.ConstantContext)
            else:
                return self.getTypedRuleContext(SimpleCParser.ConstantContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleCParser.COMMA)
            else:
                return self.getToken(SimpleCParser.COMMA, i)

        def getRuleIndex(self):
            return SimpleCParser.RULE_arrayInitValueList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayInitValueList" ):
                listener.enterArrayInitValueList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayInitValueList" ):
                listener.exitArrayInitValueList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayInitValueList" ):
                return visitor.visitArrayInitValueList(self)
            else:
                return visitor.visitChildren(self)




    def arrayInitValueList(self):

        localctx = SimpleCParser.ArrayInitValueListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_arrayInitValueList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.constant()
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==23:
                self.state = 125
                self.match(SimpleCParser.COMMA)
                self.state = 126
                self.constant()
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def retType(self):
            return self.getTypedRuleContext(SimpleCParser.RetTypeContext,0)


        def IDENT(self):
            return self.getToken(SimpleCParser.IDENT, 0)

        def LP(self):
            return self.getToken(SimpleCParser.LP, 0)

        def RP(self):
            return self.getToken(SimpleCParser.RP, 0)

        def SEMI(self):
            return self.getToken(SimpleCParser.SEMI, 0)

        def param_list(self):
            return self.getTypedRuleContext(SimpleCParser.Param_listContext,0)


        def getRuleIndex(self):
            return SimpleCParser.RULE_function_declare

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_declare" ):
                listener.enterFunction_declare(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_declare" ):
                listener.exitFunction_declare(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_declare" ):
                return visitor.visitFunction_declare(self)
            else:
                return visitor.visitChildren(self)




    def function_declare(self):

        localctx = SimpleCParser.Function_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_function_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.retType()
            self.state = 133
            self.match(SimpleCParser.IDENT)
            self.state = 134
            self.match(SimpleCParser.LP)
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 2174) != 0):
                self.state = 135
                self.param_list()


            self.state = 138
            self.match(SimpleCParser.RP)
            self.state = 139
            self.match(SimpleCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_defineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def retType(self):
            return self.getTypedRuleContext(SimpleCParser.RetTypeContext,0)


        def IDENT(self):
            return self.getToken(SimpleCParser.IDENT, 0)

        def LP(self):
            return self.getToken(SimpleCParser.LP, 0)

        def RP(self):
            return self.getToken(SimpleCParser.RP, 0)

        def LCB(self):
            return self.getToken(SimpleCParser.LCB, 0)

        def RCB(self):
            return self.getToken(SimpleCParser.RCB, 0)

        def param_list(self):
            return self.getTypedRuleContext(SimpleCParser.Param_listContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleCParser.StatementContext)
            else:
                return self.getTypedRuleContext(SimpleCParser.StatementContext,i)


        def getRuleIndex(self):
            return SimpleCParser.RULE_function_define

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_define" ):
                listener.enterFunction_define(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_define" ):
                listener.exitFunction_define(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_define" ):
                return visitor.visitFunction_define(self)
            else:
                return visitor.visitChildren(self)




    def function_define(self):

        localctx = SimpleCParser.Function_defineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_function_define)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.retType()
            self.state = 142
            self.match(SimpleCParser.IDENT)
            self.state = 143
            self.match(SimpleCParser.LP)
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 2174) != 0):
                self.state = 144
                self.param_list()


            self.state = 147
            self.match(SimpleCParser.RP)
            self.state = 148
            self.match(SimpleCParser.LCB)
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 549755844350) != 0):
                self.state = 149
                self.statement()
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 155
            self.match(SimpleCParser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RetTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(SimpleCParser.TypeContext,0)


        def VOID(self):
            return self.getToken(SimpleCParser.VOID, 0)

        def getRuleIndex(self):
            return SimpleCParser.RULE_retType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRetType" ):
                listener.enterRetType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRetType" ):
                listener.exitRetType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRetType" ):
                return visitor.visitRetType(self)
            else:
                return visitor.visitChildren(self)




    def retType(self):

        localctx = SimpleCParser.RetTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_retType)
        try:
            self.state = 159
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 3, 4, 5, 6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 157
                self.type_()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 158
                self.match(SimpleCParser.VOID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleCParser.ParamContext)
            else:
                return self.getTypedRuleContext(SimpleCParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleCParser.COMMA)
            else:
                return self.getToken(SimpleCParser.COMMA, i)

        def VOID(self):
            return self.getToken(SimpleCParser.VOID, 0)

        def getRuleIndex(self):
            return SimpleCParser.RULE_param_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_list" ):
                listener.enterParam_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_list" ):
                listener.exitParam_list(self)
